--- a/fabric-kube/channel-flow/templates/channel-workflow.yaml
+++ b/fabric-kube/channel-flow/templates/channel-workflow.yaml
@@ -265,6 +265,13 @@ spec:
       env:
         - name: FABRIC_LOGGING_SPEC
           value: {{ $.Values.logLevel }}
+        {{- if not $.Values.dind.enabled }}
+        - name: CORE_VM_ENDPOINT
+          value: unix:///host/var/run/docker.sock
+        {{- else }}
+        - name: CORE_VM_ENDPOINT
+          value: tcp://localhost:2375
+        {{- end }}
         - name: CORE_PEER_LOCALMSPID
           value: {{ $org.Name }}MSP
         - name: CORE_PEER_TLS_CERT_FILE
@@ -340,6 +347,13 @@ spec:
               {{- else }}
                 hlf-peer--{{ $org.Name | lower }}--{{ $peer | lower }}:7051
               {{- end }}
+        {{- if not $.Values.dind.enabled }}
+        - name: CORE_VM_ENDPOINT
+          value: unix:///host/var/run/docker.sock
+        {{- else }}
+        - name: CORE_VM_ENDPOINT
+          value: tcp://localhost:2375
+        {{- end }}
         - name: CORE_PEER_TLS_ENABLED
           value: {{ $.Values.tlsEnabled | quote }}
         - name: FABRIC_LOGGING_SPEC
